--- a/index.html
+++ b/index.html
@@ -4,11 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="estilo.css">
     <title>Bem Vindo a tela de login</title>
 </head>
 <body>
     <header class="cabecalho">
         <h1>Olá!, faça o login para continuar</h1>
     </header>
+
+    <form action="" class="login-form">
+        <img src="https://cdn-icons-png.flaticon.com/512/5509/5509636.png" class="foto" alt="usuario"><br>
+        <label for="">Nome de usuário:</label><br>
+
+        <input type="text" name="nome_user" id="nome_user" required placeholder="Insira seu nome de usuário" class="caixa"><br>
+
+        <label for="">E-mail:</label><br>
+
+        <input type="email" name="email_user" id="email_user" required placeholder="Insira seu email aqui" class="caixa"><br>
+
+        <label for="">Senha:</label><br>
+
+        <input type="password" name="senha" id="senha" required placeholder="Insira sua senha" class="caixa"><br><br>
+        
+        <a href="segunda.html" class="myButton">Enviar</a>
+
+
+    </form>
 </body>
 </html>
