--- a/segunda.html
+++ b/segunda.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="estilo.css">
+    <title>Deu certo</title>
 </head>
 <body class="segunda-bg">
-    <header>
+    <header class="abom">
         <h1>BEM VINDO NOVAMENTE!</h1>
     </header>
 
-    <img src="" alt="">
+    <img src="https://www.educamundo.com.br/uploads/blog_posts/271/00i_info_educa-02.png" alt="">
+    <br><br>
+
+    <img src="https://pa1.aminoapps.com/6062/922dea714ba80657990184bf9d2ef3ceada00ee1_00.gif">
+    <legend class="texto">Feito por Aurélio Pereira da Silva 3ºC Informática</legend>
 </body>
 </html>
