--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -25,7 +25,7 @@
         <label for="">Senha:</label><br>
 
         <input type="password" name="senha" id="senha" required placeholder="Insira sua senha" class="caixa"><br><br>
-        
+
         <a href="segunda.html" class="myButton">Enviar</a>
 
 
