--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="cabecalho">
         <h1>Olá!, faça o login para continuar</h1>
     </header>
-
+        <div class="container">
     <form action="" class="login-form">
         <img src="https://cdn-icons-png.flaticon.com/512/5509/5509636.png" class="foto" alt="usuario"><br>
         <label for="">Nome de usuário:</label><br>
@@ -30,5 +30,6 @@
 
 
     </form>
+</div>
 </body>
 </html>
