--- a/segunda.html
+++ b/segunda.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilo.css">
-    <title>Deu certo</title>
+    <title>Bem vindo, Sérgio Lavor</title>
 </head>
 <body class="segunda-bg">
     <header class="abom">
@@ -17,5 +17,7 @@
 
     <img src="https://pa1.aminoapps.com/6062/922dea714ba80657990184bf9d2ef3ceada00ee1_00.gif">
     <legend class="texto">Feito por Aurélio Pereira da Silva 3ºC Informática</legend>
+    <a href="index.html" class="myButton">Sair</a>
+
 </body>
 </html>
